changes in shiny app
added GUI to MAManalysis

--- a/inst/sensmixedUI/www/style.css
+++ b/inst/sensmixedUI/www/style.css
@@ -1,3 +1,6 @@
-.tab-content {
-  overflow: visible !important;
+.shiny-progress {
+  top: 50% !important;
+  left: 50% !important;
+  margin-top: -150px !important;
+  margin-left: -350px !important;
 }
